refactoring and moving code into different files for easier usage
