# src/main.go
@@ -24,17 +24,18 @@ func main(){
 	server_mux := mux.NewRouter() //Create a new mux router to handle RESTful services
 	
 	GetSrouter :=server_mux.Methods(http.MethodGet).Subrouter() //Create a subrouter of router server_mux just for get requests
-	GetSrouter.HandleFunc("/", handlers.GetWorkouts)
+	GetSrouter.HandleFunc("/workouts", handlers.GetWorkouts)
+	GetSrouter.HandleFunc("/workouts/wid{id:[0-9]+}", handlers.GetSingleWorkout)
 
 	DeleteSrouter := server_mux.Methods(http.MethodDelete).Subrouter() // Create a subrouter of router server_mux for delete requests
-	DeleteSrouter.HandleFunc("/{id:[0-9]+}", handlers.DeleteWorkout)
+	DeleteSrouter.HandleFunc("/workouts/wid{id:[0-9]+}", handlers.DeleteWorkout)
 
 	PutSrouter := server_mux.Methods(http.MethodPut).Subrouter() //Create a subrouter of router server_mux just for put requests
-	PutSrouter.HandleFunc("/{id:[0-9]+}", handlers.UpdateWorkout)
+	PutSrouter.HandleFunc("/workouts/wid{id:[0-9]+}", handlers.UpdateWorkout)
 	PutSrouter.Use(wl.MiddlewareWorkoutValidation) //Add middleware, step before Handlefunc
 
 	PostSrouter := server_mux.Methods(http.MethodPost).Subrouter()  //Create a subrouter of router server_mux just for post requests
-	PostSrouter.HandleFunc("/", handlers.AddWorkout)
+	PostSrouter.HandleFunc("/workouts", handlers.AddWorkout)
 	PostSrouter.Use(wl.MiddlewareWorkoutValidation) //Add middleware, step before Handlefunc
 
 	opts := middleware.RedocOpts{SpecURL: "/swagger.yaml"}
